apps/casdoor/overlays/librepod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: casdoor
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`casdoor.${BASE_DOMAIN:=libre.pod}`) || Host(`id.${BASE_DOMAIN:=libre.pod}`)
    priority: 1
    services:
    - name: casdoor
      port: 8000
